Implement fetch call to get events

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,14 @@
-<p>test</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Events</title>
+</head>
+
+<body>
+    <h1>Events</h1>
+    <ul id="events">
+
+    </ul>
+</body>
+
+</html>
