--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 
 <body>
     <h1>Events</h1>
+    <img src="resources/loading-indicator.gif" id="loader">
+    <div id="errorHolder"></div>
     <ul id="events">
 
     </ul>
